2013-01-23  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Source clean-ups.

	* src/abswordseg.cpp (AbsWordSeg::CreateWordList):
	  - Get rid of unused vars 'amb_sep_cnt'.
	* src/abswordseg.cpp (AbsWordSeg::GetBestSen):
	  - Reorder condition so the index 't' is range-checked before use.

	Thanks Neutron Soutmun for the cppheck.

2013-01-15  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Fix potential buffer overflow in Mule mode.

	* src/wordseg.cpp (main):
	  - Make stopstr a simple pointer to wbr or "".
	    strcpy() to fixed array can cause buffer overflow vulnerability.

	Thanks Dominik Maier for the report.
	http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=698189

2013-01-15  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Fix non-Mule mode by not inserting wbr at the end of line.

	* src/wordseg.cpp (main):
	  - Print stopstr instead of wbr in !wholeLine case.

2012-06-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	More safety on checking RTFToken emptiness.

	* src/filterrtf.cpp (class RTFToken):
	  - Add isEmpty() method for checking emptiness.
	  - Also initialize val[] string on reset(), as some code did check
	    its emptiness by peeking this string.
	* src/filterrtf.cpp (FilterRTF::chgCharState):
	  - Check rtfToken emptiness with the new isEmpty() method.

2012-06-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Fix buffer overflow bug caused by some RTF docs.

	* src/filterrtf.h (class FilterRTF):
	  - Allocate more space for strbuff[] member. 5 was too few when
	    facing non-Thai characters like '\u65533' (plus its skip bytes).
	    The safe value is 37, for U+7FFFFFFF.

2012-06-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Source clean up.

	* src/filterrtf.cpp (FilterRTF::GetNextToken):
	  - Remove misleading comment.
	  - Make if-condition more concise.

2012-06-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Fix memleak.

	* src/convutil.cpp (ConvPrint):