@@ -23,7 +23,6 @@ LongWordSeg::CreateSentence ()
 
   short int senIdx = 0;
   short int sepIdx = 0, Idx = 0;
-  short int nextSepIdx = 0, curState;
 
   wordState wState;
   // ========================================
